# vulkan-template

./: CMakeLists.txt  LICENSE  VulkanizedEngine.hpp  main.cpp  utils.hpp  vdeleter.hpp
shaders/: shader_base.frag  shader_base.vert
